# atlas-platform

./: .dockerignore  .env.local.example  .gitignore  .woodpecker.yml  AGENTS.md  Caddyfile  Cargo.toml  README.md  admin_uat.html  apps_walkthrough.md  architecture.md  cms.md  configuration.nix  core platform walkthrough.md  dev.sh  diff.patch  diff_new.patch  docker-compose.hot.yml  docker-compose.yml  file attachment.md  fix_admin_closures.py  fix_admin_closures_v2.py  fix_admin_modal.py  fix_admin_transitions.py  fix_app.patch  init-db.sh  kubernetes implementation_plan.md  multi-site_management.md  package-lock.json  platform_generics_gap_analysis.md  postgres_architecture.md  prd_high_ticket_b2b_leads.md  refactor.py  release_verification_guide.md  rewrite_b2b.py  run_server.sh  scratch_admin.html  spec_audit_ledger.md  spec_billing_monetization.md  spec_developer_console.md  (+10 more)
apps/: Cargo.toml  frontend_errors.txt  frontend_errors2.txt
apps/anchor/: .dockerignore  .gitattributes  .sops.yaml  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_JOURNEY.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  task.md  test_anchor.rs  test_math.rs
apps/anchor/assets/: Ruud Erie - Technical Architect  - Resume 06.23.2025.docx
apps/anchor/docs/: CI_CD_TROUBLESHOOTING.md  MULTI_TENANT_DEPLOYMENT_GUIDE.md  OBSERVABILITY_SETUP.md  SAAS_ONBOARDING_SPEC.md  technical_blog_post.md
apps/anchor/end2end/: tsconfig.json
apps/anchor/migrations/: 20260324000000_initial_schema.sql  20260324000000_v2_core_schema.sql  20260324000001_initial_data.sql  20260329000000_add_b2b_features.sql  20260329000001_add_meta_settings.sql  20260329000002_add_secure_smtp.sql  20260329000003_seed_services.sql  20260329000004_ai_cloud_services.sql  20260329000005_update_pricing_and_description.sql  20260330000000_anchor_rebrand.sql  20260330000001_update_socials.sql  20260330000002_create_lead_options.sql  20260404000000_add_tenant_id.sql
apps/anchor/public/: index.html  robots.txt  sitemap.xml  webauthn.js
apps/anchor/src/: app.rs  atlas_client.rs  auth.rs  b2b.rs  email.rs  lib.rs  main.rs  resume_engine.rs  state.rs
apps/anchor/style/: main.css
apps/directory-instance/: Cargo.toml  Design.md  Dockerfile  Trunk.toml  index.html  package-lock.json  tailwind.config.js
apps/directory-instance/src/: app.rs  lib.rs  main.rs
apps/directory-instance/style/: components.css  index.css  tailwind-out.css
apps/folio/: Cargo.toml  Dockerfile  folio leptos_plan.md  tailwind.config.js
apps/folio/src/: app.rs  atlas_client.rs  auth.rs  geo.rs  lib.rs  main.rs  marketing_attribution.rs  passkey_proxy.rs  state.rs
apps/folio/style/: main.css  nudge_prompt.css  scorecard_widget.css  wizard_shell.css
apps/network-instance/: Cargo.toml  Design.md  Dockerfile  README.md  Trunk.toml  index.html  package-lock.json
apps/network-instance/pkg/: directory-instance.css
apps/network-instance/src/: app.rs  auth.rs  lib.rs  main.rs
apps/network-instance/style/: index.css  pages.css  tailwind-out.css
apps/platform-admin/: Cargo.toml  Dockerfile  STYLE_GUIDE.md  compile_errors.txt  docker-dev-entrypoint.sh  docker-entrypoint.sh  frontend_errors3.txt  index.html  package-lock.json  package.json  spa_static_server.py  tailwind.config.js
apps/platform-admin/src/: app.rs  main.rs  tests.rs  utils.rs
apps/platform-admin/style/: components.css  configurator.css  index.css  pages.css  system_status.css  tailwind-out.css
apps/replacer/: Cargo.toml
apps/replacer/src/: main.rs
apps/shared-ui/: COMPONENTS.md  Cargo.toml  THEMING.md
apps/shared-ui/src/: constants.rs  lib.rs
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.sidecar  actual_errors.txt  errors.txt  errors_clean.txt  fix_compiler.py  test_webauthn.rs
backend/crates/atlas-compute-sdk/: Cargo.toml
backend/scripts/: add_categories.sql  construction_listings.sql  create_directory_type copy.sql  listsings_for_profiles.sql  more_listings.sql  random_profiles.sql  seed_50_mock_listings.sql
backend/scripts/sql/: create_users.sql  random_businesses.sql
backend/src/: api.rs  auth.rs  lib.rs  main.rs  metrics.rs  refactor2.py  scratch_sort.rs  webauthn_registry.rs
backend/src/admin/: ai_tasks.rs  ambassadors.rs  analytics.rs  app_instance.rs  billing.rs  campaigns.rs  compliance.rs  developer_console.rs  feature_flags.rs  integrations.rs  mod.rs  passkeys_admin.rs  platform_products.rs  product_variants.rs  provision.rs  routes.rs  setup.rs  support_inbox.rs  system_status.rs  upload.rs  users.rs
backend/src/atlas_apps/: anchor.rs  core_platform.rs  folio.rs  mod.rs  network_instance.rs  platform_admin.rs
backend/src/config/: app_config.rs  mod.rs  site_config.rs
backend/src/entities/: account.rs  activity.rs  ad_purchase.rs  api_token.rs  app_domain.rs  app_instance.rs  app_instance_module.rs  app_menu.rs  app_page.rs  app_page_variant.rs  app_utm_preset.rs  atlas_account.rs  atlas_activity.rs  atlas_ai_task.rs  atlas_ambassador.rs  atlas_ambassador_campaign.rs  atlas_app_deployment_config.rs  atlas_app_instance_syndication.rs  atlas_application.rs  atlas_asset.rs  atlas_attribution_touchpoint.rs  atlas_campaign.rs  atlas_campaign_enrollment.rs  atlas_campaign_event.rs  atlas_campaign_mail_drop.rs  atlas_campaign_offer_code.rs  atlas_case.rs  atlas_catalog_availability.rs  atlas_catalog_entry.rs  atlas_catalog_rate_rule.rs  atlas_commission_plan.rs  atlas_commission_plan_split.rs  atlas_contact.rs  atlas_contract.rs  atlas_document.rs  atlas_event.rs  atlas_event_registration.rs  atlas_event_ticket_type.rs  atlas_external_integration.rs  atlas_flag_instance_enablement.rs  (+102 more)
backend/src/extractors/: app_config.rs  client_context.rs  folio_role.rs  mod.rs  tenant.rs
backend/src/handlers/: ab_testing.rs  accounts.rs  activities.rs  ad_purchases.rs  admin.rs  admin_modules.rs  admin_provision.rs  app_instance.rs  app_menus.rs  app_pages.rs  app_seeds.rs  audit_logs.rs  auth_frontend.rs  cases.rs  categories.rs  communications.rs  contacts.rs  crm_status_options.rs  deals.rs  (+42 more)
tools/atlas-local/: Cargo.toml
(+1439 files in other folders)
