[package]
name = "atlas_backend"
version = "0.1.0"
edition = "2024"
default-run = "atlas_backend"

[dependencies]
anyhow = "1.0.97"
axum = {version = "0.8.4", features = ["macros"]}
tokio = { version = "1.28.2", features = ["full", "test-util", "macros"] }
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tower = { version = "0.5.2", features = ["util"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
sea-orm-migration = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.17.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4.38", features = ["serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
futures = "0.3.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10.8"
dashmap = "6.1.0"
bitflags = {version = "2.6.0", features = ["serde"]}
validator = { version = "0.18.1", features = ["derive"] }
hyper = "1.6.0"
once_cell = "1.20.3"
fake = { version = "4", features = [
    "derive",      # For deriving Dummy trait
    "uuid",        # For generating fake UUIDs
    "chrono",      # For generating fake timestamps
    "http",        # For generating fake HTTP-related data
    "serde_json"   # For generating fake JSON data
]}
urlencoding = "2.1.3"
headers = "0.4.1"
axum-extra = "0.10.1"
webauthn-rs = "0.5.4"
moka = {version = "0.12.14", features = ["sync", "future"]}
base64 = "0.22.1"
url = "2.5.8"
async-trait = "0.1.89"

[dev-dependencies]
http-body-util = "0.1.3"


