[package]
name = "folio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos         = { version = "0.8" }
leptos_router  = { version = "0.8" }
leptos_config  = { version = "0.8" }
leptos_meta    = { version = "0.8" }

# SSR-only
axum          = { version = "0.8", optional = true, features = ["macros"] }
leptos_axum   = { version = "0.8", optional = true }
tokio         = { version = "1",   features = ["rt-multi-thread"], optional = true }
tower-http    = { version = "0.6", features = ["fs", "set-header"], optional = true }
tower         = { version = "0.5", optional = true }
axum-extra    = { version = "0.10", features = ["cookie"], optional = true }
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"], optional = true }
dotenvy       = { version = "0.15", optional = true }
moka          = { version = "0.12", optional = true, features = ["future"] }
axum-prometheus = { version = "0.10.0", optional = true }

# Hydrate-only
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen             = { version = "0.2.117", optional = true }
wasm-bindgen-futures     = { version = "0.4", optional = true }

# Shared
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1.1", features = ["v4", "serde", "js"] }
chrono     = { version = "0.4", features = ["serde"] }
base64     = "0.22"
once_cell  = "1.19"
url        = "2.5.8"
futures    = "0.3"
gloo-net   = "0.6.0"
web-sys    = { version = "0.3.91", features = [
    "HtmlElement", "Document", "Window",
    "HtmlAnchorElement", "HtmlInputElement",
    "Storage", "Location", "Navigator",
] }
js-sys     = "0.3.92"

shared-ui = { path = "../shared-ui" }

[features]
hydrate = [
    "leptos/hydrate",
    "shared-ui/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "shared-ui/ssr",
    "dep:reqwest",
    "dep:dotenvy",
    "dep:tower-http",
    "dep:tower",
    "dep:axum-extra",
    "dep:moka",
    "dep:axum-prometheus",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.67"

[package.metadata.leptos]
# Increment version suffix on each deployment to bust CDN / Cloudflare edge caches.
output-name = "folio-v1"

site-root    = "target/site"
site-pkg-dir = "pkg"

tailwind-input-file  = "style/main.css"
tailwind-config-file = "tailwind.config.js"
assets-dir           = "public"

site-addr   = "127.0.0.1:3100"
reload-port = 3101

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"
env          = "DEV"

bin-features         = ["ssr"]
bin-default-features = false
lib-features         = ["hydrate"]
lib-default-features = false
lib-profile-release  = "wasm-release"
