[package]
name = "atlas_network_instance"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8" }
leptos_router = "0.8"
leptos_meta = "0.8"
shared-ui = { path = "../shared-ui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22.0", features = ["js", "serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }

# SSR specific dependencies
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full", "rt-multi-thread"], optional = true }
leptos_axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlDocument"] }
js-sys = "0.3.97"

[features]
csr = ["leptos/csr"]
hydrate = [
    "leptos/hydrate",
    "shared-ui/hydrate",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:tower",
    "dep:tower-http",
    "leptos/ssr",
    "shared-ui/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.64"

[package.metadata.leptos]
# NOTE: Increment the version suffix (v1 → v2, etc.) whenever shared-ui or app.rs changes
# that affect the WASM bundle are deployed to production, to bust Cloudflare/CDN edge caches.
# hash-files=true below provides a secondary guard but output-name versioning is more reliable.
output-name = "network-v1"

# ARCHITECTURE REQUIREMENT:
# Enable file hashing to permanently prevent Cloudflare/CDN edge caching
# of old WASM bundles. Without this, aggressive caching will cause fatal
# hydration mismatches between fresh HTML and stale WASM.
hash-files = true
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/tailwind-out.css"
assets-dir = "public"
site-addr = "0.0.0.0:8080"
reload-port = 3001
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
