[package]
name = "atlas_platform_admin"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
heck = "0.5.0"
icons = { version = "0.18.0", features = ["leptos"] }
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = "0.8.12"
leptos_ui = "0.3.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
shared-ui = { path = "../shared-ui" }
time = "0.3.47"
tw_merge = { version = "0.1.20", features = ["variant"] }
validator = "0.20.0"
wasm-bindgen = "0.2.117"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlElement", "HtmlDivElement", "Storage", "MediaQueryList", "Navigator", "NodeList", "Element", "Clipboard"] }
reqwest = { version = "0.13.2", features = ["json"] }
uuid = { version = "1.22.0", features = ["js", "serde", "v4"] }
urlencoding = "2.1.3"
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
# [package.metadata.leptos]
# tailwind-input-file = "style/index.css"
