[package]
name = "atlas-local"
version = "0.1.0"
edition = "2021"
description = "Local Atlas Platform development tooling (Compose + Caddy + DB sandbox)"
license = "UNLICENSED"
publish = false

[lib]
name = "atlas_local"
path = "src/lib.rs"

[[bin]]
name = "atlas-local"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
